# hashpoo

./: Cargo.toml  README.md
client/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
client/scripts-example/: start-poolore-cli.sh
client/src/: balance.rs  claim.rs  earnings.rs  main.rs  mine.rs  protomine.rs  signup.rs  turbomine.rs
hashpoo/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
hashpoo-cli/: CHANGELOG.md  Cargo.toml  README.md
hashpoo-cli/scripts-example/: hpc.sh
hashpoo-cli/src/: claim.rs  database.rs  generate_key.rs  main.rs  mine.rs  signup.rs  turbomine.rs
hashpoo/migrations/postgres/: drop.sql  init.sql
hashpoo/scripts.example/: hps.sh
hashpoo/src/: database.rs  main.rs  models.rs  notification.rs  utils.rs
hashpoo/src/processors/: claim_processor.rs  client_contributions_processor.rs  client_message_processor.rs  messaging_all_clients_processor.rs  mod.rs  pong_tracking_processor.rs  pool_submission_processor.rs  proof_tracking_processor.rs  ready_clients_processor.rs  reporting_processor.rs
server/: .env.example  CHANGELOG.md  Cargo.toml  README.md
server/migrations/postgres/: init.sql
server/migrations/sqlite/: init.sql
server/scripts.example/: start-poolore-srv.sh
server/src/: database.rs  dynamic_fee.rs  main.rs  models.rs  notification.rs  routes.rs  rr_database.rs  utils.rs
server/src/processors/: claim_processor.rs  client_message_processor.rs  mod.rs  ping_check_processor.rs  pong_tracking_processor.rs  pool_mine_success_processor.rs  pool_submission_processor.rs  ready_clients_processor.rs
