[workspace]
resolver = "2"
members = ["hashpoo-cli", "hashpoo"]

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
authors = ["hashpooler <hashpooler@miraland.io>"]
repository = "https://github.com/miraland-labs/hashpoo"
description = "Hashpower pool only, for PoW believers. Forked from poolore which ultimately derived from ore-hq-server."
documentation = "https://ore.supply"
homepage = "https://ore.supply"
keywords = ["solana", "miraland", "ore", "hashpoo", "mining-pool"]

[workspace.dependencies]
array-const-fn-init = "0.1.1"
axum = { version = "=0.7.2", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "2.6.0"
bytemuck = "1.14.3"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.5.14", features = ["derive"] }
colored = "2.0"
color-eyre = { version = "0.6" }
core_affinity = "0.8.1"
const-crypto = "0.1.0"
ctrlc = "3.4.5"
# deadpool-sqlite = { package = "miraland-deadpool-sqlite", version = "0.8.2", optional = true }
# deadpool-postgres = { version = "0.14.0", features = [
#     "serde",
# ], optional = true }
deadpool-sqlite = { package = "miraland-deadpool-sqlite", version = "0.8.2" }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
config = "0.14.0"
crossbeam = "0.8.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
drillx = "2.1.0"
# drillx = { package = "marsh-drillx", version = "2.1.0" }
env_logger = "0.11"
futures = "0.3.30"
futures-channel = "0.3"
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
] }
indicatif = "0.17"
inquire = "0.7.5"
log = "0.4"
mpl-token-metadata = "4.1.2"
num_enum = "0.7.2"
ore-api = "2.1.9"
ore-boost-api = "0.1.0"
ore-pool-api = { path = "api", version = "0.1.0" }
ore-pool-types = { path = "types", package = "types" }
ore-utils = { features = ["spl"], version = "2.1.9" }
# pg-connection-string = "0.0.2"
postgres-conn-str = "0.1.1"
# postgres-types = { featuers = ["derive"], version = "0.2.6" }
postgres-types = { version = "0.2.6" }
qrcode = "0.14.1"
rand = "0.8.5"
rand_chacha = "0.3.0"
rayon = "1.10"
reqwest = { version = "^0.11.0", features = ["json", "rustls-tls"] }
rpassword = "7.3.1"
rodio = "0.18.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-account-decoder = "1.18.12"
solana-client = "1.18.12"
solana-rpc-client = "1.18.12"
solana-program = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
steel = "2.1.1"
thiserror = "1.0.57"
tiny-bip39 = "0.8.2"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5"
slack-messaging = "0.3.1"
serenity = { version = "=0.11.7", default-features = false, features = [
    "rustls_backend",
    "model",
] }
zeroize = "=1.3.0"
# rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
# tokio-postgres = { version = "0.7.12", optional = true }
# tokio-postgres-rustls = { version = "0.10", optional = true }
# rustls = { version = "0.21", optional = true }
# rustls-pemfile = { version = "2", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"] }
semver = "1.0"
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.10"
rustls = "0.21"
rustls-pemfile = "2"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
opt-level = 3           # Full optimisations
codegen-units = 1       # Better optimization with fewer codegen units
lto = true              # Enable Link Time Optimization (LTO)
debug = false           # Disable debug info to reduce binary size
panic = 'abort'         # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false
