[package]
name = "hashpoo-cli"
description = "Hashpower pool only, for PoW believers. Public pool dedicated to ORE mining."
documentation = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "./README.md"

[[bin]]
name = "hpc"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
core_affinity = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
ore-api = { workspace = true }
ore-utils = { workspace = true }
drillx = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
url = { workspace = true }
spl-token = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rusqlite = { workspace = true }
spl-associated-token-account = { workspace = true }

tiny-bip39 = { workspace = true }
qrcode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }

# [profile.release]
# opt-level = 3           # Full optimisations
# codegen-units = 1       # Better optimization with fewer codegen units
# lto = true              # Enable Link Time Optimization (LTO)
# debug = false           # Disable debug info to reduce binary size
# panic = 'abort'         # Reduces the binary size further by not including unwinding information
# rpath = false
# incremental = false
# overflow-checks = false

# [build]
# rustflags = ["-C", "target-cpu=native"]
